Clean up use of okButton and requestFocus.